// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays tracking for a store 1`] = `
Array [
  Object {
    "args": Array [
      Array [
        Object {
          "action": "read",
          "name": "mykey",
          "target": Object {
            "a": 11,
          },
          "title": "Spruce Store",
          "updated": 1615351401000,
        },
      ],
    ],
    "type": "table",
  },
  Object {
    "args": Array [
      Array [
        Object {
          "action": "read",
          "name": "mykey",
          "target": Object {
            "a": 25,
          },
          "title": "Spruce Store",
          "updated": 1615351401000,
        },
      ],
    ],
    "type": "table",
  },
]
`;

exports[`dumps a store 1`] = `
Array [
  Object {
    "args": Array [
      Array [
        undefined,
      ],
    ],
    "type": "table",
  },
]
`;

exports[`dumps all stores 1`] = `
Array [
  Object {
    "args": Array [
      Array [
        Object {
          "mydata": Object {
            "one": 1,
          },
        },
      ],
    ],
    "type": "table",
  },
]
`;
